# splash_auth

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml
server/: _version.py  config.py  main.py  oidc.py  user_db.py
splash_auth/: _version.py  config.py  main.py  user_db.py
splash_auth/_tests/: test_config.py
